--- a/docs/components/carousel-3/layout.html
+++ b/docs/components/carousel-3/layout.html
@@ -68,4 +68,4 @@
         </div>
     </div>
 </div>
-<script src="../docs/js/carousel-variado.js"></script>
+<script src="js/carousel-variado.js"></script>
