--- a/docs/components/abertura/layout.html
+++ b/docs/components/abertura/layout.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="components/abertura/styles.module.css">
 
 <div class="banner">
-    <img id="bannerID" src="../../../public/Abertura.png">
+    <img id="bannerID" src="public/Abertura.png">
 </div>
