--- a/docs/components/carousel-3/layout.html
+++ b/docs/components/carousel-3/layout.html
@@ -14,40 +14,40 @@
             <input type="radio" name="radio-btn" id="radio4">
 
             <div class="slide first">
-                <img src="../../../public/Costela.jpg" alt="costela">
+                <img src="public/Costela.jpg" alt="costela">
             </div>
             <div class="slide">
-                <img src="../../../public/Carne-Cozida.jpg" alt="cozida">
+                <img src="public/Carne-Cozida.jpg" alt="cozida">
             </div>
             <div class="slide">
-                <img src="../../../public/Carne-pure.jpg" alt="pure">
+                <img src="public/Carne-pure.jpg" alt="pure">
             </div>
             <div class="slide">
-                <img src="../../../public/Frango-frito.jpg" alt="frango">
+                <img src="public/Frango-frito.jpg" alt="frango">
             </div>
             <div class="slide">
-                <img src="../../../public/Bolinha-Queijo.jpg" alt="bolinha">
+                <img src="public/Bolinha-Queijo.jpg" alt="bolinha">
             </div>
             <div class="slide">
-                <img src="../../../public/Frango-pimenta.jpg" alt="pimenta">
+                <img src="public/Frango-pimenta.jpg" alt="pimenta">
             </div>
             <div class="slide">
-                <img src="../../../public/Pizza.jpg" alt="pizza">
+                <img src="public/Pizza.jpg" alt="pizza">
             </div>
             <div class="slide">
-                <img src="../../../public/Hamburguer.jpg" alt="hamburguer">
+                <img src="public/Hamburguer.jpg" alt="hamburguer">
             </div>
             <div class="slide">
-                <img src="../../../public/Burrito.jpg" alt="burrito">
+                <img src="public/Burrito.jpg" alt="burrito">
             </div>
             <div class="slide">
-                <img src="../../../public/Bolo-Pote.jpg" alt="bolo">
+                <img src="public/Bolo-Pote.jpg" alt="bolo">
             </div>
             <div class="slide">
-                <img src="../../../public/Rosquinhas.jpg" alt="rosquinhas">
+                <img src="public/Rosquinhas.jpg" alt="rosquinhas">
             </div>
             <div class="slide">
-                <img src="../../../public/Torta.jpg" alt="torta">
+                <img src="public/Torta.jpg" alt="torta">
             </div>
 
             <div class="navigation-auto">
