--- a/docs/components/carousel-unico/layout.html
+++ b/docs/components/carousel-unico/layout.html
@@ -13,16 +13,16 @@
             <input type="radio" name="radio-btnUnico" id="radio4Unico">
 
             <div class="slideUnico first">
-                <img src="../../../public/Espeto.jpg" alt="Espeto">
+                <img src="public/Espeto.jpg" alt="Espeto">
             </div>
             <div class="slideUnico">
-                <img src="../../../public/Frango.jpg" alt="Frango">
+                <img src="public/Frango.jpg" alt="Frango">
             </div>
             <div class="slideUnico">
-                <img src="../../../public/Sorvete-Bom.jpg" alt="Sorvete">
+                <img src="public/Sorvete-Bom.jpg" alt="Sorvete">
             </div>
             <div class="slideUnico">
-                <img src="../../../public/Tacos.jpg" alt="Taco">
+                <img src="public/Tacos.jpg" alt="Taco">
             </div>
 
             <div class="navigation-autoUnico">
