--- a/docs/components/header/layout.html
+++ b/docs/components/header/layout.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="components/header/styles.module.css">
-<link rel="stylesheet" href="../../global.css">
+<link rel="stylesheet" href="global.css">
 
 <header class="navhead">
     <h3 id="title">Projeto Final</h3>
